--- a/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
+++ b/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: bitwarden-cli
-          image: YOUR_BITWARDEN_CLI_IMAGE
+          image: registry.gitlab.com/ttblt-oss/docker-bw:2023.1.0
           imagePullPolicy: IfNotPresent
           env:
             - name: BW_HOST
