fix(external secrets): add sync wave to resources

--- a/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
+++ b/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
@@ -3,6 +3,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: bitwarden-login
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   provider:
     webhook:
@@ -16,6 +18,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: bitwarden-fields
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   provider:
     webhook:
@@ -27,6 +31,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: bitwarden-notes
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   provider:
     webhook:
