--- a/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
+++ b/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
@@ -23,23 +23,23 @@ spec:
       containers:
         - name: bitwarden-cli
           image: irizzant/bitwarden-cli:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           env:
             - name: BW_HOST
               valueFrom:
                 secretKeyRef:
                   name: bitwarden-cli
                   key: BW_HOST
-            - name: BW_USER
+            - name: BW_CLIENTID
               valueFrom:
                 secretKeyRef:
                   name: bitwarden-cli
-                  key: BW_USERNAME
-            - name: BW_PASSWORD
+                  key: BW_CLIENTID
+            - name: BW_CLIENTSECRET
               valueFrom:
                 secretKeyRef:
                   name: bitwarden-cli
-                  key: BW_PASSWORD
+                  key: BW_CLIENTSECRET
           ports:
             - name: http
               containerPort: 8087
