--- a/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
+++ b/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
@@ -30,6 +30,11 @@ spec:
                 secretKeyRef:
                   name: bitwarden-cli
                   key: BW_HOST
+            - name: BW_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: bitwarden-cli
+                  key: BW_PASSWORD
             - name: BW_CLIENTID
               valueFrom:
                 secretKeyRef:
