fix(bitwarden): use fqdn

--- a/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
+++ b/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
@@ -36,6 +36,6 @@ metadata:
 spec:
   provider:
     webhook:
-      url: "http://bitwarden-cli:8087/object/item/{{ .remoteRef.key }}"
+      url: "http://bitwarden-cli.bitwarden.svc.cluster.local:8087/object/item/{{ .remoteRef.key }}"
       result:
         jsonPath: "$.data.notes"
