fix(bitwarden): use fqdn

--- a/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
+++ b/argocd/components/externalsecrets-bitwarden/cluster-secret-store/cluster-secret-store.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   provider:
     webhook:
-      url: "http://bitwarden-cli:8087/object/item/{{ .remoteRef.key }}"
+      url: "http://bitwarden-cli.bitwarden.svc.cluster.local:8087/object/item/{{ .remoteRef.key }}"
       headers:
         Content-Type: application/json
       result:
@@ -23,7 +23,7 @@ metadata:
 spec:
   provider:
     webhook:
-      url: "http://bitwarden-cli:8087/object/item/{{ .remoteRef.key }}"
+      url: "http://bitwarden-cli.bitwarden.svc.cluster.local:8087/object/item/{{ .remoteRef.key }}"
       result:
         jsonPath: "$.data.fields[?@.name==\"{{ .remoteRef.property }}\"].value"
 ---
