fix(external secrets): move to platform project

--- a/argocd/base/external-secrets.yaml
+++ b/argocd/base/external-secrets.yaml
@@ -8,6 +8,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
+  project: platform
   destination:
     namespace: external-secrets
     server: 'https://kubernetes.default.svc'
@@ -21,7 +22,6 @@ spec:
   - repoURL: 'https://github.com/irizzante/cluster-addons.git'
     targetRevision: HEAD
     ref: values
-  project: default
   syncPolicy:
     automated:
       prune: true
