fix(external secrets): add namespace to network policy

--- a/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
+++ b/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
@@ -106,6 +106,7 @@ spec:
       app.kubernetes.io/name: bitwarden-cli
   ingress:
   - from:
+    - namespaceSelector:
     - podSelector:
         matchLabels:
           app.kubernetes.io/instance: external-secrets
