--- a/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
+++ b/argocd/components/externalsecrets-bitwarden/base/bitwarden.yaml
@@ -106,7 +106,7 @@ spec:
       app.kubernetes.io/name: bitwarden-cli
   ingress:
   - from:
-    - namespaceSelector:
+    - namespaceSelector: {}
     - podSelector:
         matchLabels:
           app.kubernetes.io/instance: external-secrets
